# cmake-catch2-ci-example

./: .gitignore  CMakeLists.txt  README.md  flake.nix
.github/workflows/: build.yml  dependabot-auto-merge.yml  qa.yml
src/lib/foo/: CMakeLists.txt
src/lib/foo/include/foo/: foo.hpp
src/lib/foo/src/: foo.cpp
src/tests/: CMakeLists.txt
src/tests/unit/lib/: foo.cpp
